simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-16.snap
---
source: src/lib/ast.rs
expression: decl.initialiser()

---
Ok(
    [
        LiteralValue {
            value: 4294897296,
            min_size: 4,
        },
    ],
)
