simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions-4.snap
---
source: src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[
    Ident(
        (
            "r0",
            296..298,
        ),
    ),
    Ident(
        (
            "DISPLAY",
            299..306,
        ),
    ),
]
