simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions-5.snap
---
source: src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[
    Lit(
        LiteralValue {
            value: 13,
            min_size: 1,
        },
    ),
    Ident(
        "r0",
    ),
    Ident(
        "greeting",
    ),
]
