simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__instructions.snap
---
source: src/lib/ast.rs
expression: "instruction.operands().iter().map(Operand::value).map(Result::unwrap).collect::<Vec<_>>()"

---
[
    Ident(
        "r0b",
    ),
    Ident(
        "ROW",
    ),
]
